; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_main.c_b43_op_set_tsf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_main.c_b43_op_set_tsf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }
%struct.ieee80211_vif = type { i32 }
%struct.b43_wl = type { i32, %struct.b43_wldev* }
%struct.b43_wldev = type { i32 }

@B43_STAT_INITIALIZED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_hw*, %struct.ieee80211_vif*, i32)* @b43_op_set_tsf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b43_op_set_tsf(%struct.ieee80211_hw* %0, %struct.ieee80211_vif* %1, i32 %2) #0 {
  %4 = alloca %struct.ieee80211_hw*, align 8
  %5 = alloca %struct.ieee80211_vif*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.b43_wl*, align 8
  %8 = alloca %struct.b43_wldev*, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %4, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %4, align 8
  %10 = call %struct.b43_wl* @hw_to_b43_wl(%struct.ieee80211_hw* %9)
  store %struct.b43_wl* %10, %struct.b43_wl** %7, align 8
  %11 = load %struct.b43_wl*, %struct.b43_wl** %7, align 8
  %12 = getelementptr inbounds %struct.b43_wl, %struct.b43_wl* %11, i32 0, i32 0
  %13 = call i32 @mutex_lock(i32* %12)
  %14 = load %struct.b43_wl*, %struct.b43_wl** %7, align 8
  %15 = getelementptr inbounds %struct.b43_wl, %struct.b43_wl* %14, i32 0, i32 1
  %16 = load %struct.b43_wldev*, %struct.b43_wldev** %15, align 8
  store %struct.b43_wldev* %16, %struct.b43_wldev** %8, align 8
  %17 = load %struct.b43_wldev*, %struct.b43_wldev** %8, align 8
  %18 = icmp ne %struct.b43_wldev* %17, null
  br i1 %18, label %19, label %28

19:                                               ; preds = %3
  %20 = load %struct.b43_wldev*, %struct.b43_wldev** %8, align 8
  %21 = call i64 @b43_status(%struct.b43_wldev* %20)
  %22 = load i64, i64* @B43_STAT_INITIALIZED, align 8
  %23 = icmp sge i64 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = load %struct.b43_wldev*, %struct.b43_wldev** %8, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @b43_tsf_write(%struct.b43_wldev* %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %19, %3
  %29 = load %struct.b43_wl*, %struct.b43_wl** %7, align 8
  %30 = getelementptr inbounds %struct.b43_wl, %struct.b43_wl* %29, i32 0, i32 0
  %31 = call i32 @mutex_unlock(i32* %30)
  ret void
}

declare dso_local %struct.b43_wl* @hw_to_b43_wl(%struct.ieee80211_hw*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @b43_status(%struct.b43_wldev*) #1

declare dso_local i32 @b43_tsf_write(%struct.b43_wldev*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
